src/objects/Sales_Income_Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Average_Sales_Daily__c</fullName>
        <label>Average Sales / Daily</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Sales_Monthly__c</fullName>
        <label>Average Sales / Monthly</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Sales_Weekly__c</fullName>
        <label>Average Sales / Weekly</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLIENTS_FAMILY_MEMBERS_SALARY_INCOME__c</fullName>
        <label>CLIENTS / FAMILY MEMBERS  SALARY INCOME</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Sales / Income Estimates</relationshipLabel>
        <relationshipName>Sales_Income_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_of_Employer__c</fullName>
        <label>Contact # of Employer</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member of Non Working Member (should be any one)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employers_Details_Add_multiple__c</fullName>
        <label>Employers Details (Add multiple)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Sales / Income Estimates</relationshipLabel>
        <relationshipName>Sales_Income_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Salary__c</fullName>
        <label>Monthly Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_and_Address_of_Employer__c</fullName>
        <label>Name and Address of Employer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_years_in_Service__c</fullName>
        <label>No. of years in Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_are__c</fullName>
        <label>Sales are</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TOTAL_SALARY_A__c</fullName>
        <label>TOTAL SALARY (A)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sales / Income Estimate</label>
    <nameField>
        <displayFormat>SIEID-{0000000000}</displayFormat>
        <label>Sales / Income Estimate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales / Income Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>